# tidas-tools

./: .gitignore  AGENTS.md  README.md  README_CN.md  pyproject.toml  test_sample_functional.py
.docpact/: config.yaml
.githooks/: pre-push
.github/workflows/: ai-doc-lint.yml  ci.yml  dispatch-tidas-sdk-sync.yml  python-package-deploy.yml
ai/: architecture.md  doc-impact.yaml  repo.yaml  task-router.md  validation.md
docs/agents/: repo-architecture.md  repo-validation.md
scripts/: docpact-gate.sh  install-git-hooks.sh  schema_lock.py
src/tidas_tools/: __init__.py  convert.py  convert_cli.py  export.py  export_cli.py  package_versions.py  reference_extraction.py  release.py  runtime_rulesets.py  tidas_log.py  validate.py  validate_cli.py  validate_methodologies.py  validation_batch.py  validation_report.py
src/tidas_tools/eilcd/schemas/: ILCD_Common_DataTypes.xsd  ILCD_Common_Groups.xsd  ILCD_LifeCycleModelDataSet.xsd
src/tidas_tools/import_lca/: __init__.py  cli.py  detect.py  errors.py  mapping_csv.py  process_bundles.py  report.py
src/tidas_tools/import_lca/adapters/: __init__.py  base.py  ecospold1.py  ecospold2.py  ilcd.py  openlca_jsonld.py  openlca_process_xlsx.py  simapro_csv.py  xml_trace.py
src/tidas_tools/import_lca/model/: __init__.py  entities.py
src/tidas_tools/import_lca/store/: __init__.py  memory.py
src/tidas_tools/import_lca/writers/: __init__.py  ilcd_bridge.py  tidas_json.py  tidas_package.py
src/tidas_tools/schemas/: data_types.json  tidas_classification_category.json  tidas_contacts.json  tidas_flowproperites.json  tidas_flows.json  tidas_lciamethods.json  tidas_lifecyclemodels.json  tidas_processes.json  tidas_sources.json  tidas_unitgroups.json
src/tidas_tools/tidas/: schema.lock.json
src/tidas_tools/tidas/methodologies/: runtime_rulesets.json  runtime_rulesets.schema.json  tidas_flows.yaml  tidas_processes.yaml
src/tidas_tools/tidas/schemas/: tidas_classification_category.json  tidas_contacts.json  tidas_contacts_category.json  tidas_data_types.json  tidas_flowproperties.json  tidas_flowproperties_category.json  tidas_flows.json  tidas_flows_elementary_category.json  tidas_flows_product_category.json  tidas_lciamethods.json  tidas_lciamethods_category.json  tidas_lifecyclemodels.json  tidas_locations_category.json  tidas_processes.json  tidas_processes_category.json  tidas_sources.json  tidas_sources_category.json  tidas_unitgroups.json  tidas_unitgroups_category.json
src/tidas_tools/tidas/schemas_zh/: tidas_flows.json  (+17 more)
src/tidas_tools/validation_indexes/: __init__.py  product_flow_category_index.json
tests/: test_import_lca_cli.py  test_import_lca_detect.py  test_import_lca_ecospold1.py  test_import_lca_ecospold2.py  test_import_lca_ilcd.py  test_import_lca_mapping_csv.py  test_import_lca_openlca_jsonld.py  test_import_lca_process_xlsx.py  test_import_lca_report.py  test_import_lca_simapro_csv.py  test_import_lca_writer_placeholders.py  test_package_versions.py  test_reference_extraction.py  test_release.py  test_runtime_rulesets.py  test_schema_ilcd_alignment.py  test_schema_lock.py  test_validate.py  test_validation_batch.py
tests/fixtures/reference_extraction_v1/: golden.json
