[project]
name = "tidas-tools"
version = "0.0.12"
description = "tidas-tools"
authors = [
    {name = "Nan LI",email = "linanenv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
"boto3==1.37.33",
"jsonschema==4.23.0",
"psycopg2-binary==2.9.10",
"python-dotenv==1.1.0",
"tqdm==4.67.1",
"xmltodict==0.14.2",
]

[tool.poetry]
packages = [{include = "tidas_tools", from = "src"}]
include = ["src/tidas_tools/eilcd/*.*", "src/tidas_tools/tidas/*.*"]

[tool.poetry.scripts]
tidas-convert = "tidas_tools.convert:main"
tidas-export = "tidas_tools.export:main"
tidas-validate = "tidas_tools.validate:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
