[project]
name = "tidas-tools"
version = "0.0.15"
description = "tidas-tools"
authors = [
    { name = "Nan LI", email = "linanenv@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "boto3>=1.40.62",
    "jsonschema>=4.25.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "referencing>=0.36.2,<0.37.0",
    "tqdm>=4.67.1",
    "xmltodict>=1.0.2",
    "PyYAML>=6.0.3",
]

[project.scripts]
tidas-convert = "tidas_tools.convert:main"
tidas-export = "tidas_tools.export:main"
tidas-validate = "tidas_tools.validate:main"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tidas_tools = [
    "eilcd/**/*",
    "tidas/**/*",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
