[project]
name = "tidas-tools"
version = "0.0.40"
description = "tidas-tools"
authors = [
    { name = "Nan LI", email = "linanenv@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.43.10",
    "jsonschema>=4.26.0",
    "lxml>=6.1.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "referencing>=0.37.0",
    "tqdm>=4.67.3",
    "xmltodict>=1.0.4",
    "PyYAML>=6.0.3",
    "fastjsonschema>=2.21.2",
]

[project.scripts]
tidas-convert = "tidas_tools.convert:main"
tidas-export = "tidas_tools.export:main"
tidas-import = "tidas_tools.import_lca.cli:main"
tidas-validate = "tidas_tools.validate:main"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tidas_tools = [
    "eilcd/**/*",
    "tidas/**/*",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"
